- Tweak all the wordings in the app so that it is now more positive and more humourous. - Refactor the upload trigger to bloc state management - Remove unnecessary progress indicator parameters

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1,30 +1,31 @@
 {
-  "@@locale": "zh_CN",
-  "AppName": "环保衣橱",
-  "tagline": "在衣橱里购物",
-  "noInternetTitle" : "哎呀，网络连接中断了！",
-  "noInternetMessage" : "我们暂时休息一下\n稍后重新连接，继续可持续时尚之旅！",
-  "noInternetSnackBar" : "仍然没有连接，但您的衣橱值得等待！",
-  "retryConnection": "重试",
+  "@@locale": "zh",
+  "AppName": "环保衣橱 🌱",
+  "tagline": "在衣橱里购物\n爱上你的风格！",
+  "shortTagline": "在衣橱里购物",
+  "noInternetTitle": "哎呀，您已离线！",
+  "noInternetMessage": "我们正在享受一杯咖啡 ☕\n稍后重连，继续展现那些环保造型吧！",
+  "noInternetSnackBar": "仍然离线，但您的衣橱值得等待！ ✨",
+  "retryConnection": "再试一次？🚀",
   "ItemNameLabel": "名称",
-  "ItemNameHint": "您的物品名称是什么？",
+  "ItemNameHint": "这件时尚单品叫什么名字？",
   "AmountLabel": "金额",
-  "AmountHint": "该物品的花费是多少？",
+  "AmountHint": "这件美丽的单品花了多少钱？",
   "ItemOccasionLabel": "场合",
   "ItemSeasonLabel": "季节",
   "ItemColourLabel": "颜色",
   "ItemColourVariationLabel": "颜色变化",
   "ItemClothingTypeLabel": "服装类型",
-  "ItemClothingLayerLabel": "服装层",
-  "spring": "春",
-  "summer": "夏",
-  "autumn": "秋",
-  "winter": "冬",
-  "multi": "多季节",
+  "ItemClothingLayerLabel": "服装层次",
+  "spring": "春季",
+  "summer": "夏季",
+  "autumn": "秋季",
+  "winter": "冬季",
+  "multi": "多季",
   "top": "上衣",
   "bottom": "下装",
-  "onePiece": "连衣裙",
-  "base": "基础",
+  "onePiece": "连体衣",
+  "base": "基础层",
   "mid": "中层",
   "outer": "外层",
   "red": "红色",
@@ -33,21 +34,21 @@
   "yellow": "黄色",
   "brown": "棕色",
   "grey": "灰色",
-  "rainbow": "多色",
+  "rainbow": "彩虹色",
   "black": "黑色",
   "white": "白色",
   "light": "浅色",
   "medium": "中色",
   "dark": "深色",
   "bag": "包",
-  "belt": "腰带",
+  "belt": "皮带",
   "eyewear": "眼镜",
   "gloves": "手套",
   "hat": "帽子",
   "jewellery": "珠宝",
   "scarf": "围巾",
-  "tech": "科技",
-  "other": "杂项",
+  "tech": "科技产品",
+  "other": "其他",
   "perfume": "化妆品",
   "clothing": "服装",
   "shoes": "鞋子",
@@ -59,7 +60,7 @@
   "niche": "小众",
   "active": "活跃",
   "casual": "休闲",
-  "workplace": "职场",
+  "workplace": "工作场所",
   "social": "社交",
   "event": "活动",
   "upload_upload": "上传",
@@ -69,10 +70,10 @@
   "addCloset_addCloset": "添加衣橱",
   "itemUploaded_itemUploaded": "物品已上传",
   "myClosetTitle": "我的衣橱",
-  "myOutfitTitle": "创建我的装扮",
+  "myOutfitTitle": "创建我的造型",
   "closetUploadComplete": "衣橱上传完成",
   "closetLabel": "衣橱",
-  "outfitLabel": "装扮",
+  "outfitLabel": "造型",
   "itemNameLabel": "物品名称",
   "pleaseEnterItemName": "请输入物品名称",
   "amountSpentLabel": "花费金额",
@@ -80,206 +81,206 @@
   "selectItemType": "选择物品类型",
   "selectOccasion": "选择场合",
   "selectSeason": "选择季节",
-  "selectShoeType": "选择鞋类类型",
+  "selectShoeType": "选择鞋子类型",
   "selectAccessoryType": "选择配饰类型",
   "selectClothingType": "选择服装类型",
-  "selectClothingLayer": "选择服装层",
+  "selectClothingLayer": "选择服装层次",
   "selectColour": "选择颜色",
   "selectColourVariation": "选择颜色变化",
-  "please_enter_valid_amount": "请输入有效金额（0或更大）。",
+  "please_enter_valid_amount": "请输入有效金额（0 或更高）。",
   "update": "更新",
   "declutter": "整理",
   "item_name": "物品名称",
   "upload": "上传",
   "next": "下一步",
-  "itemNameFieldNotFilled": "物品名称字段未填写。",
-  "amountSpentFieldNotFilled": "花费金额字段未填写。",
-  "itemTypeFieldNotFilled": "物品类型字段未填写。",
-  "occasionFieldNotFilled": "场合字段未填写。",
-  "seasonFieldNotFilled": "季节字段未填写。",
-  "specificTypeFieldNotFilled": "具体类型字段未填写。",
-  "clothingLayerFieldNotFilled": "服装层字段未填写。",
-  "colourFieldNotFilled": "颜色字段未填写。",
-  "colourVariationFieldNotFilled": "颜色变化字段未填写。",
+  "itemNameFieldNotFilled": "物品名称未填写。",
+  "amountSpentFieldNotFilled": "花费金额未填写。",
+  "itemTypeFieldNotFilled": "物品类型未填写。",
+  "occasionFieldNotFilled": "场合未填写。",
+  "seasonFieldNotFilled": "季节未填写。",
+  "specificTypeFieldNotFilled": "具体类型未填写。",
+  "clothingLayerFieldNotFilled": "服装层次未填写。",
+  "colourFieldNotFilled": "颜色未填写。",
+  "colourVariationFieldNotFilled": "颜色变化未填写。",
   "interested": "有兴趣",
   "editPageTitle": "编辑物品",
   "thankYou": "谢谢！",
-  "interestAcknowledged": "您的兴趣已被记录。请关注我们的更新。",
+  "interestAcknowledged": "已记录您的兴趣——敬请期待更新！🎉",
   "sell": "出售",
   "swap": "交换",
-  "gift": "传递",
+  "gift": "赠送",
   "Throw": "丢弃",
   "declutterOptions": "您想做什么？",
-  "itemsUploadedTooltip": "显示您上传的物品数量",
-  "currentStreakTooltip": "显示您当前的无购买连续天数",
-  "highestStreakTooltip": "显示您的最高无购买记录",
-  "spendingTooltip": "显示您在新物品上花费的金额",
-  "newItemsTooltip": "显示您购买的新物品数量",
+  "itemsUploadedTooltip": "您上传到环保衣橱的物品数量",
+  "currentStreakTooltip": "您的当前无购买记录",
+  "highestStreakTooltip": "您历史最长的无购买记录！",
+  "spendingTooltip": "您购买新物品的花费金额",
+  "newItemsTooltip": "您已购买的新物品数量",
   "profileSection": "个人资料",
   "achievements": "成就",
-  "usageInsights": "使用见解",
+  "usageInsights": "使用情况分析",
   "calendar": "日历",
-  "outfits_upload": "显示您上传的装扮数量",
+  "outfits_upload": "上传的造型数量",
   "appInformationSection": "应用信息",
   "infoHub": "信息中心",
   "supportAssistanceSection": "支持与帮助",
   "becomeAmbassador": "成为大使",
   "contactUs": "联系我们",
-  "deleteAccount": "删除账户",
+  "deleteAccount": "删除账号",
   "logOut": "登出",
-  "dataUpdatedSuccessfully": "您的数据已更新",
-  "error": "错误",
-  "dataInsertedSuccessfully": "您的数据已保存",
-  "upload_successful": "上传成功！",
-  "upload_failed": "上传失败：{error}",
-  "errorIncrement": "抱歉，我们无法记录您的兴趣",
-  "declutterAcknowledged": "您的衣橱已整理！",
-  "errorDeclutter": "抱歉，我们无法整理您的衣橱",
+  "dataUpdatedSuccessfully": "数据更新成功！",
+  "error": "哎呀，出了点问题。",
+  "dataInsertedSuccessfully": "数据已保存！一切准备就绪。",
+  "upload_successful": "成功！您的衣橱又增添了一些时尚！🎉",
+  "upload_failed": "哎呀！看起来出了点问题。再试一次？🚂",
+  "errorIncrement": "哎呀！我们无法记录您的兴趣。请再试一次！",
+  "declutterAcknowledged": "干得好！您的衣橱得到了整理！😌",
+  "errorDeclutter": "我们暂时无法整理您的衣橱，但别担心——我们会尽快再试！🌿",
   "declutterFeatureTitle": "整理您的衣橱",
-  "declutterFeatureDescription": "轻松通过移除不需要的物品来组织和清理您的衣橱。简化您的衣橱并为新风格腾出空间。",
-  "unexpectedResponseFormat": "响应格式出乎意料。请稍后再试或联系支持以获取帮助。",
-  "unexpectedErrorOccurred": "发生意外错误。请稍后再试或联系支持以获取帮助。",
+  "declutterFeatureDescription": "通过移除不需要的物品，轻松组织并清理您的衣橱。简化您的衣橱，为新风格腾出空间。",
+  "unexpectedResponseFormat": "嗯，发生了一些意外。请再试一次或联系支持。",
+  "unexpectedErrorOccurred": "哎呀！出了点问题。请稍后再试，如果问题持续，请联系支持。",
   "uploadConfirmationTitle": "确认衣橱完成",
-  "uploadConfirmationDescription": "您是否已完成上传所有现有物品到您的衣橱？一旦确认，任何带有价格的新上传将标记为您的衣橱新增加的物品。",
-  "confirmUpload": "确认完成",
-  "currentStreak": "您当前不买衣服的天数记录",
-  "highestStreak": "您不买衣服的最高天数记录",
-  "costOfNewItems": "您购买的新物品花费金额",
-  "numberOfNewItems": "您购买的新物品数量",
-  "deleteAccountTitle": "删除账户",
-  "deleteAccountImpact": "警告：删除账户是不可逆的。\n",
-  "deleteAccountConfirmation": "您确定要删除您的帐户吗？\n您所有的数据以及付费功能的访问权限将被永久删除。\n数据将在48小时内被删除。",
-  "accountDeletedSuccess": "您的请求已收到，我们将在48小时内删除您的帐户。",
+  "uploadConfirmationDescription": "所有上传已完成？确认后，标记为完成。任何新上传有价钱的物品将视为新的添加！",
+  "confirmUpload": "确认成就",
+  "currentStreak": "您的当前无购买记录。",
+  "highestStreak": "您历史最长的无新衣记录！",
+  "costOfNewItems": "您添加的新物品的费用",
+  "numberOfNewItems": "您衣橱中新添加的物品数量",
+  "deleteAccountTitle": "删除账号",
+  "deleteAccountImpact": "\n\n警告：删除账号不可逆。",
+  "deleteAccountConfirmation": "所有数据和已付费的功能访问权限将被永久删除。删除将在48小时内进行。",
+  "accountDeletedSuccess": "您的请求已收到。我们将在48小时内删除您的账号。",
   "cancel": "取消",
   "delete": "删除",
-  "please_select_the_category_above": "请在上方选择类别",
-  "noAchievementFound": "未找到成就徽章",
-  "congratulations": "恭喜！",
-  "achievementMessage": "这是您的成就：",
-  "arrange": "整理",
-  "arrangeFeatureTitle": "您会定制衣橱布局吗？",
-  "arrangeFeatureDescription": "我们正在考虑让您定制衣橱的组织方式。按穿着成本或更新日期排序对您有帮助吗？",
-  "filterSearchPremiumFeature": "需要高级筛选功能吗？",
-  "quicklyFindItems": "我们正在考虑开发一个功能，帮助您更轻松地筛选物品。请告诉我们这个功能对您是否有用。",
-  "multiClosetFeatureTitle": "您会使用多个衣橱吗？",
-  "multiClosetFeatureDescription": "我们正在探索多个衣橱的想法（临时的、永久的、消失的）。这对您有用吗？",
-  "metadataFeatureTitle": "您想为物品添加更多详细信息吗？",
-  "metadataFeatureDescription": "我们正在考虑让您为物品添加额外的详细信息，使管理更容易。这会增强您的体验吗？",
-  "calendarPremiumFeature": "日历视图对您有帮助吗？",
-  "reviewOutfitsInCalendar": "我们正在考虑添加一个功能，以日历形式查看您的穿搭记录。这个功能能帮助您更好地组织吗？",
-  "swapFeatureTitle": "您对物品交换感兴趣吗？",
-  "swapFeatureDescription": "我们正在考虑开发一个数字交换物品的功能，并通知您附近的交换活动。您会参与这种活动吗？",
+  "please_select_the_category_above": "请先选择上方的类别",
+  "noAchievementFound": "尚无成就——今天就开始解锁吧！",
+  "congratulations": "恭喜！🎉",
+  "achievementMessage": "您解锁了一个新成就：",
+  "arrange": "排列",
+  "arrangeFeatureTitle": "自定义衣橱布局",
+  "arrangeFeatureDescription": "您想根据穿着成本或添加日期来组织衣橱吗？告诉我们吧！",
+  "filterSearchPremiumFeature": "高级筛选？",
+  "quicklyFindItems": "我们考虑添加高级筛选功能，以帮助您更快找到物品。这个功能好吗？",
+  "multiClosetFeatureTitle": "多个衣橱？",
+  "multiClosetFeatureDescription": "我们正在探索添加多个衣橱（临时、永久、消失）——您会使用吗？",
+  "metadataFeatureTitle": "更多物品细节？",
+  "metadataFeatureDescription": "想为您的物品添加更多细节，以便更好地组织？告诉我们吧！",
+  "calendarPremiumFeature": "日历视图？",
+  "reviewOutfitsInCalendar": "我们正在考虑为您的造型添加日历视图。这有助于您保持组织吗？",
+  "swapFeatureTitle": "交换物品？",
+  "swapFeatureDescription": "有兴趣交换物品或收到附近交换活动的通知吗？我们正在考虑这个功能——您怎么看？",
   "AnalyticsSearchPremiumFeature": "对使用分析感到好奇吗？",
   "trackAnalyticsDescription": "我们正在探索如何帮助您跟踪物品的穿着成本，并提供个性化的穿搭洞察。这个功能对您有帮助吗？",
   "ok": "好的",
-  "OutfitDay": "今日穿搭",
-  "noItemsInCategory": "请上传您的物品到我的衣橱",
-  "somethingWentWrong": "出现了问题！",
-  "failedToLoadItems": "加载项目失败",
-  "myOutfitOfTheDay": "今日穿搭",
+  "OutfitDay": "今日造型",
+  "noItemsInCategory": "请上传一些物品到您的衣橱！",
+  "somethingWentWrong": "出了点问题！😱",
+  "failedToLoadItems": "加载物品失败。请再试一次！",
+  "myOutfitOfTheDay": "我的今日造型",
   "date": "日期",
-  "noItemsFound": "未找到物品",
-  "styleOn": "评价搭配",
-  "like": "喜欢",
-  "alright": "还行",
-  "dislike": "不适合我",
+  "noItemsFound": "未找到物品。",
+  "styleOn": "评论造型",
+  "like": "爱它！😍",
+  "alright": "还不错 🤷‍♀️",
+  "dislike": "不太适合我 🤔",
   "selfie": "自拍",
   "share": "分享",
-  "OutfitReview": "穿搭评价",
-  "shareFeatureTitle": "轻松分享穿搭",
-  "shareFeatureDescription": "一键分享你的每日穿搭到社交媒体。轻松提升你的风格，激发他人灵感。",
+  "OutfitReview": "造型评论",
+  "shareFeatureTitle": "轻松分享造型",
+  "shareFeatureDescription": "一键分享您的今日造型至所有社交媒体。提升您的风格，轻松激励他人。",
   "addYourComments": "添加您的评论",
-  "termsAcknowledgement": "我已阅读",
+  "termsAcknowledgement": "我已阅读 ",
   "privacyTerms": "隐私条款",
   "and": " 和 ",
   "termsAndConditions": "服务条款",
-  "alright_feedback_sentence": "点击不太适合这套搭配的单品。",
-  "dislike_feedback_sentence": "点击让这套搭配不太合适的单品。",
-  "outfitReviewTitle": "穿搭评论已提交",
-  "outfitReviewContent": "您的穿搭评论已成功提交！",
-  "pleaseSelectAtLeastOneItem": "请选择至少一件您不喜欢的物品。",
-  "outfitCreationSuccessTitle": "准备好闪耀！",
-  "outfitCreationSuccessContent": "搭配已完成。去征服世界吧！",
+  "alright_feedback_sentence": "点击不太适合这个造型的物品。",
+  "dislike_feedback_sentence": "点击不合适这个造型的物品。",
+  "outfitReviewTitle": "造型评论已提交",
+  "outfitReviewContent": "您的造型评论已成功提交！",
+  "pleaseSelectAtLeastOneItem": "请选择至少一个不喜欢的物品。",
+  "outfitCreationSuccessTitle": "继续时尚！",
+  "outfitCreationSuccessContent": "造型已准备好。去征服世界吧，时尚达人！🦸‍♀️",
   "supportEmailSubject": "支持请求",
-  "supportEmailBody": "请在此描述您的问题",
-  "npsReviewEmailSubject": "我们期待您的反馈",
-  "npsReviewEmailBody": "请告诉我们如何改进？",
+  "supportEmailBody": "在此描述您的问题",
+  "npsReviewEmailSubject": "我们喜欢您的反馈！",
+  "npsReviewEmailBody": "您能分享一些我们可以改进的细节吗？",
   "infoHubUrl": "https://inky-twill-3ab.notion.site/dc4dd32378b0478daf36fca24e00d0c8",
   "privacyTermsUrl": "https://inky-twill-3ab.notion.site/5c881235e92240d9a008e0fe6bb80f0b",
   "termsAndConditionsUrl": "https://www.notion.so/4d657b804aed4a30a9e5fa71ba0afc78",
-  "unableToRetrieveUserId": "无法获取用户 ID。请重新登录。",
-  "failedToSubmitScore": "提交分数失败。",
-  "recommendClosetConscious": "您有多大可能向朋友推荐环保衣橱 (Closet Conscious)?",
-  "npsExplanation": "在 0 到 10 的范围内打分：\n0：完全不推荐\n10：非常推荐",
+  "unableToRetrieveUserId": "无法获取用户ID。请重新登录。",
+  "failedToSubmitScore": "提交评分失败。",
+  "recommendClosetConscious": "您有多大可能向朋友推荐环保衣橱？",
+  "npsExplanation": "0-10评分:\n0: 不太可能\n10: 非常可能",
   "termsNotAcceptedMessage": "您需要接受条款和条件才能登录。",
-  "unknownError": "出现问题，请稍后再试。",
-  "permission_needed": "应用需要此权限才能正常运行。",
-  "camera_upload_item_permission_explanation": "允许访问相机以上传服装照片，方便管理衣橱。",
-  "camera_edit_item_permission_explanation": "允许访问相机以更新物品照片。",
+  "unknownError": "哎呀，出了点问题。请稍后再试！",
+  "permission_needed": "此权限是应用正常运行所必需的。",
+  "camera_upload_item_permission_explanation": "我们需要相机权限，帮助您上传衣物照片。",
+  "camera_edit_item_permission_explanation": "允许我们使用您的相机来更新物品照片。",
   "camera_selfie_permission_explanation": "允许访问您的相机，以便与您的服装拍摄自拍。",
-  "camera_permission_explanation": "我们需要访问您的相机才能拍摄照片。",
-  "general_permission_explanation": "需要此权限才能使用此功能。",
+  "camera_permission_explanation": "相机权限是拍摄照片所必需的。",
+  "general_permission_explanation": "我们需要此权限以使应用正常工作。",
   "open_settings": "打开设置",
   "noImage": "没有图片",
-  "aistylist": "AI 造型师",
-  "aiStylistFeatureTitle": "AI 造型师使用功能",
-  "aiStylistFeatureDescription": "解锁由 AI 提供的穿搭建议。审核 90 套穿搭后，您将获得基于个人风格的推荐。",
-  "aiupload": "智能上传",
+  "aistylist": "AI造型师",
+  "aiStylistFeatureTitle": "AI造型师使用功能",
+  "aiStylistFeatureDescription": "解锁AI推荐造型。评论90个造型，获得个性化的风格推荐。",
+  "aiupload": "智能\n上传",
   "aiUploadFeatureTitle": "智能上传使用功能",
-  "aiUploadFeatureDescription": "轻松上传物品，并自动添加元数据。AI 会帮助您节省时间，填写类别、颜色等详细信息。",
-  "selectItemsToCreateOutfit": "请选择物品以创建您的穿搭。",
-  "unsavedChangesMessage": "您有未保存的更改。请选择保存或放弃这些更改，然后再选择照片。",
+  "aiUploadFeatureDescription": "轻松上传物品并自动生成元数据。让AI处理细节！",
+  "selectItemsToCreateOutfit": "选择物品来创建您的造型。",
+  "unsavedChangesMessage": "您有未保存的更改。请保存或丢弃它们，然后选择照片。",
   "noNewClothes90Achievement": "可持续的开始！",
-  "noNewClothes90AchievementMessage": "你已经达到了90天不买新衣服的目标！你正在为更加绿色的未来建立强大的习惯。继续保持下去！",
-  "noNewClothes225Achievement": "环保战士的崛起！",
-  "noNewClothes225AchievementMessage": "225天持续不买新衣！你正在为可持续发展做出贡献，你的衣橱也欣欣向荣。太棒了！",
-  "noNewClothes405Achievement": "有意识选择的冠军！",
-  "noNewClothes405AchievementMessage": "405天强势坚持！你对现有物品的珍惜是一个巨大的启发，你是有意识生活的榜样。",
+  "noNewClothes90AchievementMessage": "您已达成90天不买新衣的目标！继续建立环保习惯！🌱",
+  "noNewClothes225Achievement": "环保战士在行动！",
+  "noNewClothes225AchievementMessage": "225天了！您的衣橱在成长，地球也在受益。🌍",
+  "noNewClothes405Achievement": "环保选择的冠军！",
+  "noNewClothes405AchievementMessage": "405天了！您对环保时尚的承诺令人鼓舞。",
   "noNewClothes630Achievement": "可持续发展的领袖！",
-  "noNewClothes630AchievementMessage": "630天不买新衣服——你正在用实际行动引领他人！你的奉献正在对地球产生真实的影响。",
-  "noNewClothes900Achievement": "变革的开拓者！",
-  "noNewClothes900AchievementMessage": "哇！900天明智选择。你的影响力正在启发他人重新思考他们的习惯。继续为可持续发展开拓前路！",
-  "noNewClothes1215Achievement": "可持续的象征！",
-  "noNewClothes1215AchievementMessage": "1,215天有意识的生活！你的可持续之旅正在激励他人。继续引领潮流吧！",
+  "noNewClothes630AchievementMessage": "630天不买新衣——您正在引领潮流！继续加油！",
+  "noNewClothes900Achievement": "改变的先驱者！",
+  "noNewClothes900AchievementMessage": "900天的环保选择！您正在时尚领域树立可持续发展新标杆！",
+  "noNewClothes1215Achievement": "可持续时尚偶像！",
+  "noNewClothes1215AchievementMessage": "1,215天的有意生活！您的旅程正在激励他人追随您的脚步。",
   "noNewClothes1575Achievement": "极简主义大师！",
-  "noNewClothes1575AchievementMessage": "1,575天拥抱你现有的物品。你的旅程堪称传奇。你正在重写时尚规则！",
-  "allClothesWornAchievement": "全衣尽穿，全由你定！",
-  "allClothesWornAchievementMessage": "你已经穿遍了衣橱中的每件单品！你正在掌握有意识的时尚选择。干得好！",
+  "noNewClothes1575AchievementMessage": "1,575天珍惜已有之物。您正在重新定义时尚规则！",
+  "allClothesWornAchievement": "每件衣服，都是您的选择！",
+  "allClothesWornAchievementMessage": "您已经穿过衣橱中的每一件物品！您正在掌控自己的时尚选择。",
   "closetUploadAchievement": "虚拟衣橱完成！",
-  "closetUploadAchievementMessage": "恭喜！你已经将所有物品上传到了虚拟衣橱。现在你可以最大限度地利用你拥有的物品了！",
+  "closetUploadAchievementMessage": "恭喜！您已将所有物品上传到您的虚拟衣橱。现在你可以最大限度地利用你拥有的物品了！",
   "firstSelfieTakenAchievement": "自拍明星！",
-  "firstSelfieTakenAchievementMessage": "你已经拍摄了你的第一张自拍！展示你的风格，让你的衣橱熠熠生辉！",
-  "firstOutfitCreatedAchievement": "穿搭设计师！",
-  "firstOutfitCreatedAchievementMessage": "你的第一套搭配已经完成！你正在迈向掌握个人风格的道路上。",
+  "firstSelfieTakenAchievementMessage": "您拍了您的第一张自拍！秀出您的风格，让您的衣橱大放异彩！",
+  "firstOutfitCreatedAchievement": "造型建筑师！",
+  "firstOutfitCreatedAchievementMessage": "您的第一个造型已经准备好了！您正在掌握您的风格。",
   "defaultAchievementTitle": "成就解锁！",
-  "defaultAchievementMessage": "你达到了新的里程碑！在有意识的时尚之旅中，继续保持出色的表现。",
-  "unableToProcessAccountDeletion": "我们暂时无法处理您的账户删除请求。请通过电子邮件联系我们：support@example.com，以获取帮助。",
-  "uploadItemBronzeTitle": "青铜计划 - 上传物品",
-  "uploadItemBronzeDescription": "上传额外200个物品",
-  "uploadItemSilverTitle": "白银计划 - 上传物品",
-  "uploadItemSilverDescription": "上传额外700个物品",
-  "uploadItemGoldTitle": "黄金计划 - 上传物品",
-  "uploadItemGoldDescription": "上传无限数量的物品",
-  "editItemBronzeTitle": "青铜计划 - 编辑物品图片",
-  "editItemBronzeDescription": "编辑额外200张物品图片",
-  "editItemSilverTitle": "白银计划 - 编辑物品图片",
-  "editItemSilverDescription": "编辑额外700张物品图片",
-  "editItemGoldTitle": "黄金计划 - 编辑物品图片",
-  "editItemGoldDescription": "编辑无限数量的物品图片",
-  "selfieBronzeTitle": "青铜计划 - 自拍",
-  "selfieBronzeDescription": "拍摄额外200张自拍",
-  "selfieSilverTitle": "白银计划 - 自拍",
-  "selfieSilverDescription": "拍摄额外700张自拍",
-  "selfieGoldTitle": "黄金计划 - 自拍",
-  "selfieGoldDescription": "拍摄无限数量的自拍",
-  "multiOutfitTitle": "多重搭配高级功能",
-  "multiOutfitDescription": "每天创建多个搭配",
+  "defaultAchievementMessage": "您已达成一个新里程碑！继续努力，迈向环保时尚的旅程。",
+  "unableToProcessAccountDeletion": "我们暂时无法处理您的账号删除请求。请发送电子邮件至support@example.com获取帮助。",
+  "uploadItemBronzeTitle": "铜计划 - 上传物品",
+  "uploadItemBronzeDescription": "再上传200件物品，继续建立您的环保衣橱！",
+  "uploadItemSilverTitle": "银计划 - 上传物品",
+  "uploadItemSilverDescription": "再上传700件物品，让您的衣橱充满生机！",
+  "uploadItemGoldTitle": "金计划 - 上传物品",
+  "uploadItemGoldDescription": "无限上传！添加尽可能多的物品到您的环保衣橱。",
+  "editItemBronzeTitle": "铜计划 - 编辑物品图片",
+  "editItemBronzeDescription": "再编辑200件物品图片，让您的衣橱保持新鲜。",
+  "editItemSilverTitle": "银计划 - 编辑物品图片",
+  "editItemSilverDescription": "再编辑700件物品图片，提升您的衣橱品味！",
+  "editItemGoldTitle": "金计划 - 编辑物品图片",
+  "editItemGoldDescription": "无限图片编辑！不断优化您的衣橱。",
+  "selfieBronzeTitle": "铜计划 - 自拍",
+  "selfieBronzeDescription": "再拍200张自拍，保持您的风格！",
+  "selfieSilverTitle": "银计划 - 自拍",
+  "selfieSilverDescription": "再拍700张自拍，展示您的时尚进步！",
+  "selfieGoldTitle": "金计划 - 自拍",
+  "selfieGoldDescription": "无限自拍！当灵感来临时，随时记录您的造型。",
+  "multiOutfitTitle": "多造型高级功能",
+  "multiOutfitDescription": "每天创建多个造型，继续实验您的风格！",
   "purchase_button": "立即购买",
-  "loading_text":"加载中",
-  "uploadItemBronzeSuccessTitle": "恭喜！再增加200件物品到您的环保衣橱",
-  "uploadItemBronzeSuccessMessage": "您已解锁了200件物品的空间！继续精心挑选，打造反映您独特风格的可持续衣橱。",
-  "uploadItemSilverSuccessTitle": "太棒了！再增加700件物品，展现您的风采",
-  "uploadItemSilverSuccessMessage": "您的衣橱空间扩展了！现在可以添加700件物品，继续打造符合环保理念的个性风格。",
-  "uploadItemGoldSuccessTitle": "无限量！您的衣橱现在无边无际 ",
-  "uploadItemGoldSuccessMessage": "您已解锁无限空间！随心添加物品，让您的可持续衣橱完美展示您的个人风格。"
+  "loading_text": "加载中... 时尚魔法正在进行中 🧙‍♂️✨",
+  "uploadItemBronzeSuccessTitle": "恭喜！200件新物品加入您的环保衣橱",
+  "uploadItemBronzeSuccessMessage": "您已解锁200件物品空间！继续有计划地添加物品，建立反映您独特风格的环保衣橱。",
+  "uploadItemSilverSuccessTitle": "太棒了！700件新物品展示您的风格",
+  "uploadItemSilverSuccessMessage": "您的衣橱变大了！现在您可以再添加700件物品。继续优化您的个人风格，同时做出环保选择。",
+  "uploadItemGoldSuccessTitle": "无限制！您的衣橱现在没有边界",
+  "uploadItemGoldSuccessMessage": "您已解锁无限空间！添加尽可能多的物品，让您的环保衣橱反映出最好的个人风格。"
 }
