- Implement one-off achievement for items page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -252,6 +252,16 @@
   "firstSelfieTakenAchievementMessage": "You’ve taken your first selfie! Show off your style and let your closet shine!",
   "firstOutfitCreatedAchievement": "Outfit Architect!",
   "firstOutfitCreatedAchievementMessage": "Your first outfit is ready! You're on your way to mastering your style.",
+  "firstItemGiftedAchievement": "Generous Giver!",
+  "firstItemGiftedAchievementMessage": "You’ve gifted your first item! Your style is making someone else’s day brighter.",
+  "firstItemPicEditedAchievement": "Picture Perfect!",
+  "firstItemPicEditedAchievementMessage": "Your first item picture has been edited! Your closet is looking better than ever.",
+  "firstItemSoldAchievement": "Smart Seller!",
+  "firstItemSoldAchievementMessage": "You’ve sold your first item! Way to turn your closet into cash and make space for new looks.",
+  "firstItemSwapAchievement": "Sustainable Swapper!",
+  "firstItemSwapAchievementMessage": "You’ve swapped your first item! Your wardrobe just got a stylish and sustainable refresh.",
+  "firstItemUploadAchievement": "Item Initiator!",
+  "firstItemUploadAchievementMessage": "Your first item is uploaded! Your virtual closet journey has begun!",
   "defaultAchievementTitle": "Achievement Unlocked!",
   "defaultAchievementMessage": "You’ve reached a new milestone! Keep up the great work as you continue your journey towards mindful fashion.",
   "unableToProcessAccountDeletion": "We’re unable to process your account deletion right now. Could you kindly email us at support@example.com for assistance?",
