--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1,5 +1,5 @@
 {
-  "@@locale": "zh",
+  "@@locale": "zh_CN",
   "AppName": "环保衣橱 🌱",
   "tagline": "在衣橱里购物\n爱上你的风格！",
   "shortTagline": "在衣橱里购物",
@@ -246,12 +246,22 @@
   "noNewClothes1575AchievementMessage": "1,575天珍惜已有之物。您正在重新定义时尚规则！",
   "allClothesWornAchievement": "每件衣服，都是您的选择！",
   "allClothesWornAchievementMessage": "您已经穿过衣橱中的每一件物品！您正在掌控自己的时尚选择。",
-  "closetUploadAchievement": "虚拟衣橱完成！",
-  "closetUploadAchievementMessage": "恭喜！您已将所有物品上传到您的虚拟衣橱。现在你可以最大限度地利用你拥有的物品了！",
+  "closetUploadAchievement": "虚拟衣橱已完成！",
+  "closetUploadAchievementMessage": "恭喜你！你已将所有物品上传到虚拟衣橱。现在你可以像专业人士一样搭配造型了！",
   "firstSelfieTakenAchievement": "自拍明星！",
-  "firstSelfieTakenAchievementMessage": "您拍了您的第一张自拍！秀出您的风格，让您的衣橱大放异彩！",
-  "firstOutfitCreatedAchievement": "造型建筑师！",
-  "firstOutfitCreatedAchievementMessage": "您的第一个造型已经准备好了！您正在掌握您的风格。",
+  "firstSelfieTakenAchievementMessage": "你拍下了第一张自拍！展示你的风格，让你的衣橱闪耀吧！",
+  "firstOutfitCreatedAchievement": "造型大师！",
+  "firstOutfitCreatedAchievementMessage": "你的第一套造型已经完成！你正迈向掌控自己风格的道路。",
+  "firstItemGiftedAchievement": "慷慨送礼者！",
+  "firstItemGiftedAchievementMessage": "你送出了第一件物品！你的风格让别人的一天变得更加美好。",
+  "firstItemPicEditedAchievement": "完美图片！",
+  "firstItemPicEditedAchievementMessage": "你已编辑了第一张物品图片！你的衣橱看起来比以前更出色。",
+  "firstItemSoldAchievement": "聪明卖家！",
+  "firstItemSoldAchievementMessage": "你卖出了第一件物品！恭喜你把衣橱变现，同时腾出空间迎接新造型。",
+  "firstItemSwapAchievement": "可持续交换者！",
+  "firstItemSwapAchievementMessage": "你完成了第一次物品交换！你的衣橱变得既时尚又环保。",
+  "firstItemUploadAchievement": "物品发起者！",
+  "firstItemUploadAchievementMessage": "你已上传了第一件物品！你的虚拟衣橱之旅正式开始！",
   "defaultAchievementTitle": "成就解锁！",
   "defaultAchievementMessage": "您已达成一个新里程碑！继续努力，迈向环保时尚的旅程。",
   "unableToProcessAccountDeletion": "我们暂时无法处理您的账号删除请求。请发送电子邮件至support@example.com获取帮助。",
