--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -292,5 +292,6 @@
   "uploadItemSilverSuccessTitle": "Amazing! 700 More Items to Express Your Style",
   "uploadItemSilverSuccessMessage": "Your closet just got bigger!\nYou can now add 700 more items. Keep refining your personal style while making eco-conscious choices.",
   "uploadItemGoldSuccessTitle": "Limitless! Your Closet is Now Boundless",
-  "uploadItemGoldSuccessMessage": "You’ve unlocked unlimited space! Add as many items as you want and let your sustainable wardrobe reflect the best of your personal style."
+  "uploadItemGoldSuccessMessage": "You’ve unlocked unlimited space! Add as many items as you want and let your sustainable wardrobe reflect the best of your personal style.",
+  "clickUploadItemInCloset": "Click Upload button to upload your first item in the closet."
 }
