Address the issue of edit item screen number reverts to original when other metadata is amended.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -71,7 +71,7 @@
   "itemUploaded_itemUploaded": "Item Uploaded",
   "myClosetTitle": "My Closet",
   "myOutfitTitle": "Create My Outfit",
-  "closetUploadComplete": "Closet Upload Complete",
+  "closetUploadComplete": "I uploaded my closet",
   "closetLabel": "Closet",
   "outfitLabel": "Outfit",
   "itemNameLabel": "Item Name",
@@ -141,7 +141,7 @@
   "unexpectedResponseFormat": "Hmm, that was unexpected. Please try again or contact support.",
   "unexpectedErrorOccurred": "Yikes! Something went wrong. Please try again later or contact support if it persists.",
   "uploadConfirmationTitle": "Confirm Closet Completion",
-  "uploadConfirmationDescription": "All set with uploading? Confirm to mark your closet as complete. Any new upload with amount will count as a fresh addition!",
+  "uploadConfirmationDescription": "Confirm your closet upload! New items with a price will count as fresh additions, affecting your no-buy streak!",
   "confirmUpload": "Confirm Achievement",
   "currentStreak": "Your current no-buy streak.",
   "highestStreak": "Your all-time record of no new clothes!",
