--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -71,7 +71,7 @@
   "itemUploaded_itemUploaded": "物品已上传",
   "myClosetTitle": "我的衣橱",
   "myOutfitTitle": "创建我的造型",
-  "closetUploadComplete": "衣橱上传完成",
+  "closetUploadComplete": "我上传了我的衣橱",
   "closetLabel": "衣橱",
   "outfitLabel": "造型",
   "itemNameLabel": "物品名称",
@@ -141,7 +141,7 @@
   "unexpectedResponseFormat": "嗯，发生了一些意外。请再试一次或联系支持。",
   "unexpectedErrorOccurred": "哎呀！出了点问题。请稍后再试，如果问题持续，请联系支持。",
   "uploadConfirmationTitle": "确认衣橱完成",
-  "uploadConfirmationDescription": "所有上传已完成？确认后，标记为完成。任何新上传有价钱的物品将视为新的添加！",
+  "uploadConfirmationDescription": "确认您的衣橱上传！有价格的新物品将被视为新的添加，会影响您的不购买记录！",
   "confirmUpload": "确认成就",
   "currentStreak": "您的当前无购买记录。",
   "highestStreak": "您历史最长的无新衣记录！",
