Ensure all edit item fields are validated prior to submission to database

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -102,6 +102,10 @@
   "clothingLayerFieldNotFilled": "Clothing Layer field is not filled.",
   "colourFieldNotFilled": "Colour field is not filled.",
   "colourVariationFieldNotFilled": "Colour Variation field is not filled.",
+  "clothingTypeRequired": "Clothing type is required.",
+  "accessoryTypeRequired": "Accessory type is required.",
+  "shoesTypeRequired": "Shoes type is required.",
+  "pleaseCorrectTheErrors": "Please correct the errors in the form.",
   "interested": "Interested",
   "editPageTitle": "Edit Item",
   "thankYou": "Thank You!",
