--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -102,6 +102,10 @@
   "clothingLayerFieldNotFilled": "服装层次未填写。",
   "colourFieldNotFilled": "颜色未填写。",
   "colourVariationFieldNotFilled": "颜色变化未填写。",
+  "clothingTypeRequired": "服装类型是必需的。",
+  "accessoryTypeRequired": "配饰类型是必需的。",
+  "shoesTypeRequired": "鞋类类型是必需的。",
+  "pleaseCorrectTheErrors": "请更正表单中的错误。",
   "interested": "有兴趣",
   "editPageTitle": "编辑物品",
   "thankYou": "谢谢！",
