--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -299,5 +299,8 @@
   "uploadItemGoldSuccessMessage": "You’ve unlocked unlimited space! Add as many items as you want and let your sustainable wardrobe reflect the best of your personal style.",
   "clickUploadItemInCloset": "Click Upload button to upload your first item in the closet.",
   "enterEventName": "What's the occasion?",
-  "hintEventName": "Enter the event or special moment."
+  "hintEventName": "Enter the event or special moment.",
+  "update_required_title": "Time to Refresh!",
+  "update_required_content": "We’ve made some improvements you’ll love! Update now to keep your wardrobe fresh and sustainable.",
+  "update_button_text": "Let’s Do It!"
 }
