--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -299,5 +299,8 @@
   "uploadItemGoldSuccessMessage": "您已解锁无限空间！添加尽可能多的物品，让您的环保衣橱反映出最好的个人风格。",
   "clickUploadItemInCloset": "点击上传按钮，将你的第一件物品上传到衣橱。",
   "enterEventName": "这个是什么场合？",
-  "hintEventName": "输入这个场合或特别时刻。"
+  "hintEventName": "输入这个场合或特别时刻。",
+  "update_required_title": "是时候更新啦！",
+  "update_required_content": "我们做了一些您会喜欢的改进！ 立即更新，让您的衣橱保持新鲜和可持续性。",
+  "update_button_text": "马上行动！"
 }
