Create user preference table and user_closet table in database

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -167,7 +167,7 @@
   "filterSearchPremiumFeature": "Advanced Filters?",
   "quicklyFindItems": "We’re thinking about adding advanced filters to help you find your items more easily. Sound good?",
   "multiClosetFeatureTitle": "Multiple Closets?",
-  "multiClosetFeatureDescription": "We’re exploring adding multiple closets (temporary, permanent, disappearing)—would you use this?",
+  "multiClosetFeatureDescription": "We’re exploring adding multiple closets (permanent, disappearing)—would you use this?",
   "metadataFeatureTitle": "More Item Details?",
   "metadataFeatureDescription": "Want to add extra details to your items for better organization? Let us know!",
   "calendarPremiumFeature": "Calendar View?",
