--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -167,7 +167,7 @@
   "filterSearchPremiumFeature": "高级筛选？",
   "quicklyFindItems": "我们考虑添加高级筛选功能，以帮助您更快找到物品。这个功能好吗？",
   "multiClosetFeatureTitle": "多个衣橱？",
-  "multiClosetFeatureDescription": "我们正在探索添加多个衣橱（临时、永久、消失）——您会使用吗？",
+  "multiClosetFeatureDescription": "我们正在探索添加多个衣橱（永久、消失）——您会使用吗？",
   "metadataFeatureTitle": "更多物品细节？",
   "metadataFeatureDescription": "想为您的物品添加更多细节，以便更好地组织？告诉我们吧！",
   "calendarPremiumFeature": "日历视图？",
