Implement consistent messaging when there is no items in closet / outfit

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -178,7 +178,8 @@
   "trackAnalyticsDescription": "Track your cost per wear and get personalized outfit insights. Would this be helpful?",
   "ok": "OK",
   "OutfitDay": "Outfit of the Day",
-  "noItemsInCategory": "Please upload some items to your closet!",
+  "noItemsInOutfitCategory": "Your outfit canvas is waiting!\nAdd items to your closet or adjust filters to see more.",
+  "noItemsInCloset": "No items yet!\nAdd to your closet or change filters to explore.",
   "somethingWentWrong": "Something went wrong! 😱",
   "failedToLoadItems": "Failed to load items. Please try again!",
   "myOutfitOfTheDay": "My Outfit of the Day",
