--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -178,7 +178,8 @@
   "trackAnalyticsDescription": "我们正在探索如何帮助您跟踪物品的穿着成本，并提供个性化的穿搭洞察。这个功能对您有帮助吗？",
   "ok": "好的",
   "OutfitDay": "今日造型",
-  "noItemsInCategory": "请上传一些物品到您的衣橱！",
+  "noItemsInOutfitCategory": "添加衣橱物品，或调整筛选以创建穿搭。",
+  "noItemsInCloset": "暂无物品！添加衣橱物品或调整筛选条件。",
   "somethingWentWrong": "出了点问题！😱",
   "failedToLoadItems": "加载物品失败。请再试一次！",
   "myOutfitOfTheDay": "我的今日造型",
