Implemented the customize UI that interacts with the backend.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -161,7 +161,7 @@
   "noAchievementFound": "No achievements yet—start unlocking them today!",
   "congratulations": "Congratulations! 🎉",
   "achievementMessage": "You’ve unlocked a new achievement:",
-  "arrange": "Arrange",
+  "arrange": "Customize",
   "arrangeFeatureTitle": "Customize Your\nCloset Layout",
   "arrangeFeatureDescription": "Would you like to organize your closet by cost per wear or date added? Let us know!",
   "filterSearchPremiumFeature": "Advanced Filters?",
@@ -304,5 +304,19 @@
   "update_required_title": "Time to Refresh!",
   "update_required_content": "We’ve made some improvements you’ll love! Update now to keep your wardrobe fresh and sustainable.",
   "update_button_text": "Let’s Do It!",
-  "failedToSaveOutfit": "Failed to save outfit. Please try again."
+  "failedToSaveOutfit": "Failed to save outfit. Please try again.",
+  "gridSize3": "3 items per row",
+  "gridSize5": "5 items per row",
+  "gridSize7": "7 items per row",
+  "updatedAt": "Updated At",
+  "createdAt": "Created At",
+  "amountSpent": "Amount Spent",
+  "itemLastWorn": "Last Worn",
+  "wornInOutfit": "Worn in Outfit",
+  "pricePerWear": "Price Per Wear",
+  "ascending": "Ascending",
+  "descending": "Descending",
+  "customizeClosetView": "Customize Closet View",
+  "resetToDefault": "Reset to Default",
+  "saveCustomization": "Save Customization"
 }
