--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -161,8 +161,8 @@
   "noAchievementFound": "尚无成就——今天就开始解锁吧！",
   "congratulations": "恭喜！🎉",
   "achievementMessage": "您解锁了一个新成就：",
-  "arrange": "排列",
-  "arrangeFeatureTitle": "自定义衣橱布局",
+  "arrange": "衣橱布局",
+  "arrangeFeatureTitle": "自定衣橱布局",
   "arrangeFeatureDescription": "您想根据穿着成本或添加日期来组织衣橱吗？告诉我们吧！",
   "filterSearchPremiumFeature": "高级筛选？",
   "quicklyFindItems": "我们考虑添加高级筛选功能，以帮助您更快找到物品。这个功能好吗？",
@@ -304,5 +304,19 @@
   "update_required_title": "是时候更新啦！",
   "update_required_content": "我们做了一些您会喜欢的改进！ 立即更新，让您的衣橱保持新鲜和可持续性。",
   "update_button_text": "马上行动！",
-  "failedToSaveOutfit": "保存搭配失败，请重试。"
+  "failedToSaveOutfit": "保存搭配失败，请重试。",
+  "gridSize3": "每行3个项目",
+  "gridSize5": "每行5个项目",
+  "gridSize7": "每行7个项目",
+  "updatedAt": "更新时间",
+  "createdAt": "创建时间",
+  "amountSpent": "花费金额",
+  "itemLastWorn": "最后穿着",
+  "wornInOutfit": "穿着次数",
+  "pricePerWear": "每次穿着价格",
+  "ascending": "升序",
+  "descending": "降序",
+  "customizeClosetView": "自定义衣橱视图",
+  "resetToDefault": "重置为默认",
+  "saveCustomization": "保存自定义设置"
 }
