Standardize the colour for customize bloc, and make sure the trigger works when saving customization to myCloset

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -318,5 +318,8 @@
   "descending": "Descending",
   "customizeClosetView": "Customize Closet View",
   "resetToDefault": "Reset to Default",
-  "saveCustomization": "Save Customization"
+  "saveCustomization": "Save Customization",
+  "gridSizePickerTitle": "Grid Size Picker",
+  "sortCategoryPickerTitle": "Sort Category Picker",
+  "sortOrderPickerTitle": "Sort Order Picker"
 }
