Refactor to allow multi-selection for metadata.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -291,7 +291,9 @@
   "multiOutfitTitle": "Multi Outfit Premium Feature",
   "multiOutfitDescription": "Create multiple outfits a day and keep experimenting with your style!",
   "customizeTitle": "Personalized Closet View",
-  "customizeDescription": "Upgrade to customize your closet view, sort with ease,\nand cherish each piece in your collection.",
+  "customizeDescription": "Personalize your view with grid size, sort category, and sort order.",
+  "customizeClosetPageDescription": "Browse your closet in a flexible grid, sorted by your chosen category and order.",
+  "customizeOutfitPageDescription": "Find items for your outfits in a flexible grid, sorted by category and order to make styling easy.",
   "purchase_button": "Unlock Now",
   "loading_text": "Loading... Fashion magic in progress 🧙‍♂️✨",
   "uploadItemBronzeSuccessTitle": "Congrats! 200 More Items to Your Conscious Closet",
