--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -292,6 +292,8 @@
   "multiOutfitDescription": "每天创建多个造型，继续实验您的风格！",
   "customizeTitle": "个性化衣橱视图",
   "customizeDescription": "升级定制你的衣橱视图，轻松排序，提升风格管理，珍惜每一件衣物",
+  "customizeClosetPageDescription": "按您选择的类别和顺序浏览您的衣橱，灵活网格显示。",
+  "customizeOutfitPageDescription": "通过网格按类别和顺序浏览单品，轻松找到穿搭灵感。",
   "purchase_button": "立即购买",
   "loading_text": "加载中... 时尚魔法正在进行中 🧙‍♂️✨",
   "uploadItemBronzeSuccessTitle": "恭喜！200件新物品加入您的环保衣橱",
